fixed scrollbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,6 +27,7 @@
 html {
   scroll-behavior: smooth;
   font-size: var(--font-size-base);
+  scrollbar-width: none;
 }
 
 body {
